# free-genai-bootcamp-2025

backend_lang_portal/: .gitignore  Dockerfile  config.py  database.py  models.py  repositories.py  requirements.txt  schemas.py  todo.md  uv.md
backend_lang_portal/routes/: groups_routes.py  study_session_routes.py  word_routes.py
backend_lang_portal/utils/: rate_limiter.py
frontend_lang_portal/: package-lock.json  package.json  tech_specs.md  tsconfig.app.json
frontend_lang_portal/src/: App.tsx
jsl_app/: README.md  hand_detect.py  hand_gesture_data.csv  hand_gesture_model.h5  hand_gesture_model.tflite  hand_gesture_model_quantized.tflite  hand_train.ipynb  pyproject.toml
listening_app/: config.py  pyproject.toml  question_generator.py  response_example.py  transcriber.py  transcript_structurer.py  utils.py  vector_store.py
listening_app/prompts/: question_generator.py
listening_app/questions/: 0e0duD8_LFE.txt  7HfHdb5J3f4.txt  TYn4OgknPDc.txt
listening_app/transcripts/: 7HfHdb5J3f4.txt  TYn4OgknPDc.txt
listening_app/vectorstore/: chroma.sqlite3
opea-comps/: .env.template  build_megaservices.sh  build_microservices.sh
preweek/: text.md
preweek/genai-architecting/: README.md
tasks-200/backend_lang_portal/: README.md  app.db  create_tables.py  main.py  pyproject.toml  schemas.py
tasks-200/backend_lang_portal/routes/: study_session_routes.py  word_routes.py
text_based_game/server/: Keypoints  (+9 more)
writing_app/: .env.template  README.md  api_client.py  config.py  fetch_random_text.py  image_analyzer.py  llm.py  main.py  prompts.yaml  pyproject.toml
(+68 files in other folders)
